--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": "^7.2",
-        "laravel/framework": "5.7.*",
         "fideloper/proxy": "^4.0",
-        "jenssegers/mongodb": "~3.0",
         "ixudra/curl": "^6.16",
-        "laravel/tinker": "^1.0"
+        "jenssegers/mongodb": "~3.0",
+        "laravel/framework": "5.7.*",
+        "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
