--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "jenssegers/mongodb": "~3.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "rap2hpoutre/laravel-log-viewer": "^0.22.1",
+        "spatie/laravel-http-logger": "^1.1"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
