--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "rap2hpoutre/laravel-log-viewer": "^0.22.1",
-        "spatie/laravel-http-logger": "^1.1"
+        "spatie/laravel-http-logger": "^1.1",
+        "kylekatarnls/laravel-carbon-2": "^1.0.0",
+        "nesbot/carbon": "2.7.0 as 1.26.3"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
