--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,11 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master",
         "barryvdh/laravel-ide-helper": "^2.5",
         "filp/whoops": "^2.0",
-        "fzaninotto/faker": "~1.4"
+        "fzaninotto/faker": "~1.4",
+        "phpunit/phpunit": "^7",
+        "roave/security-advisories": "dev-master"
     },
     "autoload": {
         "psr-4": {
