--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,26 @@
 {
-    "name": "API for cuba-ai-bot",
+    "name": "mrdreek/cuba-ai-bot",
     "description": "API for cuba-ai-bot",
     "keywords": ["framework", "laravel", "API"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": "^7.2",
-        "fideloper/proxy": "^4.0",
-        "ixudra/curl": "^6.16",
-        "jenssegers/mongodb": "~3.0",
-        "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0",
-        "maatwebsite/excel": "^3.1",
-        "rap2hpoutre/laravel-log-viewer": "^0.22.1",
-        "spatie/laravel-http-logger": "^1.1",
-        "kylekatarnls/laravel-carbon-2": "^1.0.0",
-        "nesbot/carbon": "2.7.0 as 1.26.3",
-        "ext-json": "*"
+        "ext-json": "*",
+        "fideloper/proxy": "4.2.*",
+        "ixudra/curl": "6.18.*",
+        "jenssegers/mongodb": "3.6.*",
+        "laravel/framework": "5.8.*",
+        "laravel/tinker": "1.0.*",
+        "maatwebsite/excel": "3.1.*",
+        "rap2hpoutre/laravel-log-viewer": "1.3.*",
+        "spatie/laravel-http-logger": "1.4.*"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.5",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "~1.4",
-        "phpunit/phpunit": "^7",
+        "barryvdh/laravel-ide-helper": "2.6.*",
+        "filp/whoops": "2.5.*",
+        "fzaninotto/faker": "1.9.*",
+        "phpunit/phpunit": "8.4.*",
         "roave/security-advisories": "dev-master"
     },
     "autoload": {
